--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Me</string>
+    <string name="enter_email">email id...</string>
+    <string name="enter_password">password...</string>
+    <string name="forgot_password">FORGOT PASSWORD</string>
+    <string name="sign_in_btn_text">Sign-In</string>
 </resources>
