--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,22 @@
 <resources>
     <string name="app_name">Me</string>
-    <string name="enter_email">email id...</string>
-    <string name="enter_password">password...</string>
+    <string name="enter_email">email id…</string>
+    <string name="enter_password">password…</string>
     <string name="forgot_password">FORGOT PASSWORD</string>
     <string name="sign_in_btn_text">Sign-In</string>
+    <string name="add_your_password">Add your password…</string>
+    <string name="confirm_password">confirm password…</string>
 
     // Fonts
     <string name="font_hinted_Averta_Bold" translatable="false">fonts/hinted-Averta-Bold.ttf</string>
+
+    // For the onboarding suggession
+    <string name="start_with_your_email">Let\'s start with your email…</string>
+
+    // For the SharedPreferences
+    <string name="preference_file_key">com.avenjr.me.me</string>
+    <string name="email">null</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
