--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,15 @@
     <string name="sign_in_btn_text">Sign-In</string>
     <string name="add_your_password">Add your password…</string>
     <string name="confirm_password">confirm password…</string>
+    <string name="enter_mobile_number">enter mobile number…</string>
+
+    // Main Activity
+    <string name="register_user">Register</string>
+    <string name="sign_in">Sign-In</string>
+    <string name="already_registered_n_sign_in">already registered? \n SIGN IN</string>
+
+    // Confirm mobile number fragment
+    <string name="confirm_mobile_number">Confirm your mobile number...</string>
 
     // Fonts
     <string name="font_hinted_Averta_Bold" translatable="false">fonts/hinted-Averta-Bold.ttf</string>
@@ -14,10 +23,8 @@
     <string name="start_with_your_email">Let\'s start with your email…</string>
 
     // For the SharedPreferences
-    <string name="preference_file_key">com.avenjr.me.me</string>
-    <string name="email">null</string>
-    <string name="launcher_activity">true</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="preference_file_key" translatable="false">com.avenjr.me.me</string>
+    <string name="email" translatable="false">null</string>
+    <string name="launcher_activity" translatable="false">true</string>
 
 </resources>
