- Added the progress bar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,7 @@
     <string name="preference_file_key" translatable="false">com.avenjr.me.me</string>
     <string name="email" translatable="false">null</string>
     <string name="launcher_activity" translatable="false">true</string>
+    <string name="logo_view">logo_view</string>
+    <string name="loading_generic_message">loading...</string>
 
 </resources>
