--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Me</string>
     <string name="enter_email">email id…</string>
     <string name="enter_password">password…</string>
-    <string name="forgot_password">FORGOT PASSWORD</string>
+    <string name="forgot_password">Forgot Password</string>
     <string name="sign_in_btn_text">Sign-In</string>
     <string name="add_your_password">Add your password…</string>
     <string name="confirm_password">confirm password…</string>
@@ -28,5 +28,15 @@
     <string name="launcher_activity" translatable="false">true</string>
     <string name="logo_view">logo_view</string>
     <string name="loading_generic_message">loading...</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
+
+    // Forgot Password
+    <string name="please_enter_email">please enter your email…</string>
+    <string name="forgot_your_email_passwod">forgot your email and password?</string>
+    <string name="emailId">email</string>
+    <string name="password">password</string>
+    <string name="forgot_email">Forgot Email</string>
+    <string name="select_dob">select your date of birth…</string>
 
 </resources>
