--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="password">password</string>
     <string name="forgot_email">Forgot Email</string>
     <string name="select_dob">select your date of birth…</string>
+    <string name="login_title">User Login</string>
+    <string name="approve_reject_image">approve reject image</string>
 
 </resources>
