--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,15 @@
     <string name="select_dob">select your date of birth…</string>
     <string name="login_title">User Login</string>
     <string name="approve_reject_image">approve reject image</string>
+    <string name="skip">Skip</string>
+    <string name="are_you_sure">Are your sure?</string>
+    <string name="Yes">Yes</string>
+    <string name="welcome">Welcome!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_your_hobbies">Select your hobbies...</string>
+    <string name="back_button">back_button</string>
+    <string name="next_button">next_button</string>
 
 </resources>
