- Updated the onboarding screen.

--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -2,11 +2,33 @@
 <resources>
     <string name="enter_password">पासवर्ड…</string>
     <string name="app_name">मी</string>
-    <string name="enter_email">ई-मेल आयडी…</string>
+    <string name="enter_email">ई - मेल आयडी</string>
     <string name="forgot_password">" चुकीचा संकेतशब्द"</string>
     <string name="sign_in_btn_text">" साइन-इन"</string>
-    <string name="confirm_password">" पासवर्डची पुष्टी करा ..."</string>
-    <string name="add_your_password">" तुमचा पासवर्ड जोडा ..."</string>
-    <string name="enter_mobile_number">मोबाइल नंबर प्रविष्ट करा ...</string>
-    <string name="start_with_your_email">" चला आपल्या ईमेलसह प्रारंभ करूया ..."</string>
+    <string name="confirm_password">" पासवर्डची पुष्टी करा …"</string>
+    <string name="add_your_password">" तुमचा पासवर्ड जोडा …"</string>
+    <string name="enter_mobile_number">मोबाइल नंबर प्रविष्ट करा …</string>
+    <string name="start_with_your_email">" चला आपल्या ईमेलसह प्रारंभ करूया …"</string>
+    <string name="emailId">" ईमेल"</string>
+    <string name="forgot_email">" ईमेल विसरलात"</string>
+    <string name="already_registered_n_sign_in">"आधीच नोंदणी झाली आहे? "</string>
+    <string name="are_you_sure">आपली खात्री आहे?</string>
+    <string name="confirm_mobile_number">आपल्या मोबाइल नंबरची पुष्टी करा …</string>
+    <string name="cancel">रद्द करा</string>
+    <string name="Yes">होय</string>
+    <string name="forgot_your_email_passwod">" आपला ईमेल आणि संकेतशब्द विसरलात?"</string>
+    <string name="login_title">वापरकर्ता लॉगिन</string>
+    <string name="loading_generic_message">लोड करीत आहे…</string>
+    <string name="my_intrest">माझी आवड</string>
+    <string name="password">संकेतशब्द</string>
+    <string name="please_enter_email">कृपया आपला ईमेल प्रविष्ट करा …</string>
+    <string name="register_user">नोंदणी करा</string>
+    <string name="select_dob">आपली जन्मतारीख निवडा…</string>
+    <string name="select_extra_activities_title">आपले प्रोफाइल तयार करण्यासाठी आपल्या अतिरिक्त क्रियाकलाप निवडा …</string>
+    <string name="select_hobbies_title">" आपले प्रोफाइल तयार करण्यासाठी आपले छंद निवडा…"</string>
+    <string name="select_your_hobbies">" आपले छंद निवडा …"</string>
+    <string name="share">सामायिक करा</string>
+    <string name="sign_in">साइन-इन</string>
+    <string name="skip">वगळा</string>
+    <string name="submit">सबमिट करा</string>
 </resources>
